# ai-ops-hub

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  config.py  pyproject.toml  requirements.txt  run_auth.py
.github/workflows/: ci-pipeline.yml  infrastructure-health.yml  infrsctructure-health.yml
docs/: architecture.md  git_conventions.md
infra/: __init__.py
infra/ai_utils/: README.md  __init__.py  ingestor.py  processor.py  visualizer.py
infra/ai_utils/tests/: test_ingestor.py  test_processor.py  test_visualizer.py
infra/common/: __init__.py  config.py  logger.py
infra/common/tests/: test_logger.py
infra/gdrive/: README.md  __init__.py  auth.py  service.py
infra/gdrive/scripts/: check_auth.py
infra/gdrive/tests/: gdrive_test.py
infra/scripts/: integrity_check.py
infra/scripts/health_check/: README.md  __main__.py  health_check_gdrive.py  health_check_ingestor.py  health_check_lab.py  health_check_logger.py  health_check_processor.py  health_check_visualizer.py
lab/experiments/: car_prices_prediction.py  polynomial_regression.py
lab/notebooks/: car_price_prediction.ipynb  car_prices_prediction.ipynb  linear_regression.ipynb  polynomial_regression.ipynb  train-test.ipynb
lab/src/trainning/: train_test_data.py
